# Log-File-Anomaly-Explainer

./: .env.example  .gitignore  PROMPT_DOCUMENTATION.md  README.md  error_knowledge_base.json  log_analysis.db  main.py  pyproject.toml  report.md  streamlit_app.py
Document/: prompt_documentation.md
Project/: README.md
Project/src/: llm_client.py  parser.py
Project/tests/: test_agent.py  test_llm_client.py
Team/: Team_Details.md
Video/: Video_Link.md
src/: __init__.py  agent.py  alert_system.py  analytics.py  batch_processor.py  cli.py  comparison.py  database.py  debug_utils.py  llm_client.py  parser.py  pattern_recognition.py  report_generator.py  tools.py  web.py
tests/: test_agent.py  test_parser.py  test_tools.py
