[project]
name = "log-anomaly-explainer"
version = "0.1.0"
description = "CLI tool that ingests log files, detects anomalies, and explains them via LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "google-genai>=2.8.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
log-explainer = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
